--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,26 +1,70 @@
 body {
   background: #E44235;
+  display: flex;
+  flex-direction: column;
   margin: 0;
+  font-weight: 100;
 }
 
 #menu, #timer, #controls, #result {
   width: 100%;
+  color: white;
+  font-size: 12px;
+  font-family: 'Noto Sans CJK TC';
 }
-
+.btn{
+  width: 50%;
+  height: 50px;
+  justify-content: space-around;
+  align-items: center;
+  display: flex;
+  background: #DA2F22;
+  margin: 10px;
+}
+.btn-full{
+  width: 85%;
+}
 .insider {
   padding: 10px;
 }
 
 #menu {
   color: white;
-
+  text-align: right;
+  i{
+    color: white;
+  }
 }
 
-#menu i {
-  color: white;
+#timer {
+  font-size: 100px;
+  text-align: center;
+}
+.clearfix {
+  clear: both;
+}
+#controls {
+  .btn{
+    float: left;
+  }
+  display: flex;
+  justify-content:space-around;
 }
 
 #result {
   background-color: #E9EEEF;
-  height: 100px;
+  display: flex;
+  align-content: space-around;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  .item {
+    border-radius: 100%;
+    margin: 10px;
+    width: 25px;
+    height: 25px;
+    background: #8A9B9C;
+  }
 }
