--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -82,8 +82,7 @@ body.sleep {
 #result {
   background-color: #E9EEEF;
   display: flex;
-  flex: 1;
-  align-content: space-around;
+  align-content: center;
   justify-content: center;
   flex-wrap: wrap;
   box-sizing: border-box;
